memsql-master/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: memsql-master
  name: memsql-master
spec:
  replicas: 1
  selector:
    app: memsql-master
    deploymentconfig: memsql-master
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: memsql-master
        deploymentconfig: memsql-master
    spec:
      volumes:
        -
          name: memsql-master-data
          persistentVolumeClaim:
            claimName: memsql-master-data
      containers:
      - image: memsql-master/memsql-master:latest
        imagePullPolicy: Always
        name: memsql-master
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
            -
              name: memsql-master-data
              mountPath: /memsql
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - memsql-master
      from:
        kind: ImageStreamTag
        name: memsql-master:latest
    type: ImageChange
