memsql-master/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: memsql-master
  labels:
    app: memsql-master
spec:
  to:
    kind: Service
    name: memsql-master
  port:
    targetPort: 9000
status: {  }
